Specify source and target versions on javac invocations.

--- a/build.xml
+++ b/build.xml
@@ -62,7 +62,8 @@
     
     <target name="compile.app" description="Compile Application source files">
         <mkdir dir="${dir.build.server-java.app}"/>
-        <javac srcdir="${dir.src.server-java.app}" destdir="${dir.build.server-java.app}" debug="${debug}" deprecation="yes">
+        <javac srcdir="${dir.src.server-java.app}" destdir="${dir.build.server-java.app}" 
+                debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}">
             <classpath>
                 <pathelement path="${echo3.app.lib.jar}"/>
              </classpath>
@@ -100,7 +101,8 @@
     
     <target name="compile.webcontainer.impl" depends="verify.servlet.api, compile.app">
         <mkdir dir="${dir.build.server-java.webcontainer}"/>
-        <javac srcdir="${dir.src.server-java.webcontainer}" destdir="${dir.build.server-java.webcontainer}" debug="${debug}" deprecation="yes">
+        <javac srcdir="${dir.src.server-java.webcontainer}" destdir="${dir.build.server-java.webcontainer}" 
+                debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}">
             <classpath>
                 <pathelement path="${dir.build.server-java.app}"/>
                 <pathelement path="${echo3.webcontainer.lib.jar}"/>
@@ -141,7 +143,7 @@
             <fileset dir="${dir.src.server-java.test-ia.htdocs}"/>
         </copy>
         <javac srcdir="${dir.src.server-java.test-ia.lib}" destdir="${dir.build.server-java.testapp}/WEB-INF/classes" 
-                debug="${debug}" deprecation="yes">
+                debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}">
             <classpath>
                 <pathelement path="${servlet.lib.jar}"/>
                 <pathelement path="${dir.dist.lib}/${jarfile.extras.app}"/>
