--- a/build.xml
+++ b/build.xml
@@ -174,7 +174,7 @@
                 destdir="${dir.javadoc.app.public}" 
                 WindowTitle="${javadoc.windowtitle}"
                 DocTitle="${javadoc.doctitle.app}"
-                Overview="${dir.src.server-java.app}/overview.html"
+                Overview="${dir.src.server-java.app}/nextapp/echo/extras/app/overview.html"
                 Header="${javadoc.header}">
             <classpath>
                 <pathelement path="${echo3.app.lib.jar}"/>
@@ -190,7 +190,7 @@
                 destdir="${dir.javadoc.app.private}" 
                 WindowTitle="${javadoc.windowtitle}"
                 DocTitle="${javadoc.doctitle.app}"
-                Overview="${dir.src.server-java.app}/overview.html"
+                Overview="${dir.src.server-java.app}/nextapp/echo/extras/app/overview.html"
                 Header="${javadoc.header}"
                 Private="true">
             <classpath>
@@ -208,7 +208,7 @@
                 destdir="${dir.javadoc.webcontainer.public}" 
                 WindowTitle="${javadoc.windowtitle}"
                 DocTitle="${javadoc.doctitle.webcontainer}"
-                Overview="${dir.src.server-java.webcontainer}/overview.html"
+                Overview="${dir.src.server-java.webcontainer}/nextapp/echo/extras/webcontainer/overview.html"
                 Header="${javadoc.header}">
             <classpath>
                 <pathelement path="${echo3.app.lib.jar}"/>
@@ -227,7 +227,7 @@
                 destdir="${dir.javadoc.webcontainer.private}" 
                 WindowTitle="${javadoc.windowtitle}"
                 DocTitle="${javadoc.doctitle.webcontainer}"
-                Overview="${dir.src.server-java.webcontainer}/overview.html"
+                Overview="${dir.src.server-java.webcontainer}/nextapp/echo/extras/webcontainer/overview.html"
                 Header="${javadoc.header}"
                 Private="true">
             <classpath>
