added tests for DefaultTreeSelectionModel fixed bug in DefaultTreeSelectionModel, when mode is single selection only one path is allowed in the model (Mantis #283)

--- a/ant.properties
+++ b/ant.properties
@@ -43,6 +43,11 @@ dir.javadoc.webcontainer.public         ${dir.javadoc.public}/webcontainer
 dir.javadoc.app.private                 ${dir.javadoc.private}/app
 dir.javadoc.webcontainer.private        ${dir.javadoc.private}/webcontainer
 
+dir.testoutput                          testoutput
+dir.src.server-java.app-test            ${dir.src.server-java}/app-test
+dir.build.app-test                      ${dir.build}/test/app
+dir.testoutput.app-test                 ${dir.testoutput}/app
+
 dir.build                               build
 dir.build.server-java                   ${dir.build}/server-java
 dir.build.server-java.app               ${dir.build.server-java}/app
