Added lint targets.

--- a/ant.properties
+++ b/ant.properties
@@ -34,6 +34,7 @@ dir.src.server-java.test-ia.htdocs      ${dir.src.server-java}/testapp-interacti
 dir.src.server-java.test-ia.deploy      ${dir.src.server-java}/testapp-interactive/deploy
 
 dir.resource                            resource
+dir.resource.jslint                     ${dir.resource}/JSLint
 
 dir.javadoc                             javadoc
 dir.javadoc.public                      ${dir.javadoc}/public
