--- a/build.xml
+++ b/build.xml
@@ -373,5 +373,23 @@
         </exec>
     </target>
     
+    <target name="lint.extras">
+        <java fork="true" jar="${dir.resource.jslint}/rhino.jar">
+            <arg value="${dir.resource.jslint}/jslint.js"/>
+            <arg value="${dir.src.client.extras}/"/>
+        </java>
+    </target>
+
+
+    <target name="lint.webcontainer">
+        <java fork="true" jar="${dir.resource.jslint}/rhino.jar">
+            <arg value="${dir.resource.jslint}/jslint.js"/>
+            <arg value="${dir.src.server-java.webcontainer.res}/"/>
+        </java>
+    </target>
+
+    <target name="lint" depends="lint.extras,lint.webcontainer">
+    </target>
+
 </project>
 
