Component/peer skeleton for DataGrid (nonfunctional).

--- a/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -4,6 +4,7 @@ nextapp.echo.extras.app.BorderPane                          nextapp.echo.extras.
 nextapp.echo.extras.app.CalendarSelect                      nextapp.echo.extras.webcontainer.sync.component.CalendarSelectPeer
 nextapp.echo.extras.app.ColorSelect                         nextapp.echo.extras.webcontainer.sync.component.ColorSelectPeer
 nextapp.echo.extras.app.ContextMenu                         nextapp.echo.extras.webcontainer.sync.component.ContextMenuPeer
+nextapp.echo.extras.app.DataGrid                            nextapp.echo.extras.webcontainer.sync.component.DataGridPeer
 nextapp.echo.extras.app.DragSource                          nextapp.echo.extras.webcontainer.sync.component.DragSourcePeer
 nextapp.echo.extras.app.DropDownMenu                        nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
 nextapp.echo.extras.app.Group                               nextapp.echo.extras.webcontainer.sync.component.GroupPeer
