Progress on data grid model rendering (initial portion).

--- a/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -27,3 +27,6 @@ nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeStructure \
                                              nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeStructurePeer
 nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeSelectionUpdate \
                                              nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeSelectionUpdatePeer
+nextapp.echo.extras.webcontainer.sync.component.DataGridPeer$ModelData \
+                                             nextapp.echo.extras.webcontainer.sync.component.DataGridPeer$ModelDataPeer
+                                             
