Added content blink test to Interactive Test App (blinks entire content).

--- a/src/server-java/testapp-interactive/lib/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/server-java/testapp-interactive/lib/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -1,2 +1,2 @@
-#nextapp.echo.extras.testapp.BlinkComponent nextapp.echo.extras.testapp.BlinkComponent$Peer
+nextapp.echo.extras.testapp.BlinkComponent nextapp.echo.extras.testapp.BlinkComponent$Peer
         
