--- a/build.xml
+++ b/build.xml
@@ -339,37 +339,61 @@
         <delete file="${dir.release}/${tarfile.release}"/>
     </target>
 
+	<target name="mvn-install" depends="dist" description="Installs the jar into the local maven repository">
+		<jar basedir="${dir.src.server-java.app}" destfile="dist${file.separator}/echo3extras-app-sources.jar" />
+		<jar basedir="${dir.src.server-java.webcontainer}" destfile="dist${file.separator}/echo3extras-webcontainer-sources.jar" />
+		<condition property="onWindows">
+			<os family="windows"/>
+		</condition>
+		<antcall target="mvn-install-win"/>
+		<antcall target="mvn-install-unix"/>
+	</target>
+	
     <target name="mvn-install-win"
-        depends="dist"
-        description="Installs the jars into the local maven repository (windows environment)">
+        description="Installs the jars into the local maven repository (windows environment)"
+    	if="onWindows">
         <exec executable="cmd">
+			<arg value="/c"/>
+			<arg value="mvn install:install-file -DpomFile=resource/maven/echo3extras-app-pom.xml -Dfile=dist${file.separator}lib${file.separator}Echo3_Extras_App.jar"/>
+		</exec>
+    	<exec executable="cmd">
             <arg value="/c"/>
-            <arg value="mvn install:install-file -DgroupId=com.nextapp -DartifactId=echo3-app -Dversion=1.0-SNAPSHOT -Dpackaging=jar -Dfile=dist${file.separator}lib${file.separator}Echo3_App.jar"/>
-            </exec>
-            <exec executable="cmd">
-                <arg value="/c"/>
-                <arg value="mvn install:install-file -DgroupId=com.nextapp -DartifactId=echo3-webcontainer -Dversion=1.0-SNAPSHOT -Dpackaging=jar -Dfile=dist${file.separator}lib${file.separator}Echo3_WebContainer.jar"/>
-            </exec>
+            <arg value="mvn install:install-file -DpomFile=resource/maven/echo3-app-pom.xml -Dfile=dist${file.separator}echo3extras-app-sources.jar -Dclassifier=sources"/>
+		</exec>
+		<exec executable="cmd">
+			<arg value="/c"/>
+			<arg value="mvn install:install-file -DpomFile=resource/maven/echo3extras-webcontainer-pom.xml -Dfile=dist${file.separator}lib${file.separator}Echo3_Extras_WebContainer.jar"/>
+		</exec>
+    	<exec executable="cmd">
+            <arg value="/c"/>
+            <arg value="mvn install:install-file -DpomFile=resource/maven/echo3-app-pom.xml -Dfile=dist${file.separator}echo3extras-webcontainer-sources.jar -Dclassifier=sources"/>
+		</exec>
     </target>
 	
     <target name="mvn-install-unix"
-        depends="dist"
-        description="Installs the jar into the local maven repository (unix environment)">
-        <exec executable="mvn">
+        description="Installs the jar into the local maven repository (unix environment)"
+    	unless="onWindows">
+    	<exec executable="mvn">
             <arg value="install:install-file"/>
-            <arg value="-DgroupId=com.nextapp"/>
-            <arg value="-DartifactId=echo3extras-app"/>
-            <arg value="-Dversion=1.0-SNAPSHOT"/>
-            <arg value="-Dpackaging=jar"/>
+        	<arg value="-DpomFile=resource/maven/echo3extras-app-pom.xml"/>
             <arg value="-Dfile=dist${file.separator}lib${file.separator}Echo3_Extras_App.jar"/>
+        </exec>
+    	<exec executable="mvn">
+            <arg value="install:install-file"/>
+        	<arg value="-DpomFile=resource/maven/echo3extras-app-pom.xml"/>
+    		<arg value="-Dclassifier=sources"/>
+            <arg value="-Dfile=dist${file.separator}echo3extras-app-sources.jar"/>
+        </exec>
+    	<exec executable="mvn">
+            <arg value="install:install-file"/>
+        	<arg value="-DpomFile=resource/maven/echo3extras-webcontainer-pom.xml"/>
+            <arg value="-Dfile=dist${file.separator}lib${file.separator}Echo3_Extras_WebContainer.jar"/>
         </exec>
         <exec executable="mvn">
             <arg value="install:install-file"/>
-            <arg value="-DgroupId=com.nextapp"/>
-            <arg value="-DartifactId=echo3extras-webcontainer"/>
-            <arg value="-Dversion=1.0-SNAPSHOT"/>
-            <arg value="-Dpackaging=jar"/>
-            <arg value="-Dfile=dist${file.separator}lib${file.separator}Echo3_Extras_WebContainer.jar"/>
+        	<arg value="-DpomFile=resource/maven/echo3extras-webcontainer-pom.xml"/>
+        	<arg value="-Dclassifier=sources"/>
+			<arg value="-Dfile=dist${file.separator}echo3extras-webcontainer-sources.jar"/>
         </exec>
     </target>
     
