Initial commit, reorder component.  Barely working.

--- a/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -9,6 +9,8 @@ nextapp.echo.extras.app.DragSource                          nextapp.echo.extras.
 nextapp.echo.extras.app.DropDownMenu                        nextapp.echo.extras.webcontainer.sync.component.DropDownMenuPeer
 nextapp.echo.extras.app.Group                               nextapp.echo.extras.webcontainer.sync.component.GroupPeer
 nextapp.echo.extras.app.MenuBarPane                         nextapp.echo.extras.webcontainer.sync.component.MenuBarPanePeer
+nextapp.echo.extras.app.Reorder                             nextapp.echo.extras.webcontainer.sync.component.ReorderPeer
+nextapp.echo.extras.app.ReorderHandle                       nextapp.echo.extras.webcontainer.sync.component.ReorderHandlePeer
 nextapp.echo.extras.app.RichTextArea                        nextapp.echo.extras.webcontainer.sync.component.RichTextAreaPeer
 nextapp.echo.extras.app.TabPane                             nextapp.echo.extras.webcontainer.sync.component.TabPanePeer
 nextapp.echo.extras.app.ToolTipContainer                    nextapp.echo.extras.webcontainer.sync.component.ToolTipContainerPeer
