--- a/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -30,4 +30,7 @@ nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeSelectionUpdate \
                                              nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeSelectionUpdatePeer
 nextapp.echo.extras.webcontainer.sync.component.DataGridPeer$ModelData \
                                              nextapp.echo.extras.webcontainer.sync.component.DataGridPeer$ModelDataPeer
+
+# Echo3 Extras Command Synchronize Peers
+nextapp.echo.extras.app.richtext.InsertHtmlCommand          nextapp.echo.extras.webcontainer.sync.component.InsertHtmlCommandPeer
                                              
