General progress on server-side ListViewer.

--- a/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/server-java/webcontainer/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -32,6 +32,8 @@ nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeSelectionUpdate \
                                              nextapp.echo.extras.webcontainer.sync.component.TreePeer$TreeSelectionUpdatePeer
 nextapp.echo.extras.webcontainer.sync.component.DataGridPeer$ModelData \
                                              nextapp.echo.extras.webcontainer.sync.component.DataGridPeer$ModelDataPeer
+nextapp.echo.extras.webcontainer.sync.component.AbstractViewerPeer$ModelData \
+                                             nextapp.echo.extras.webcontainer.sync.component.AbstractViewerPeer$ModelDataPeer
 
 # Echo3 Extras Command Synchronize Peers
 nextapp.echo.extras.app.richtext.InsertHtmlCommand          nextapp.echo.extras.webcontainer.sync.component.InsertHtmlCommandPeer
