Align project and files to Maven-like naming style. Provide -sources.jar bundles.

--- a/ant.properties
+++ b/ant.properties
@@ -11,13 +11,15 @@ echo3.app.lib.jar                       ${env.ECHO3_LIB_HOME}/Echo3_App.jar
 echo3.webcontainer.lib.jar              ${env.ECHO3_LIB_HOME}/Echo3_WebContainer.jar
 
 debug                                   yes
-jarfile.extras.app                      Echo3_Extras_App.jar
-jarfile.extras.webcontainer             Echo3_Extras_WebContainer.jar
+jarfile.extras.app                      echo3-extras-app-${release.version}.jar
+jarfile.extras.webcontainer             echo3-extras-webcontainer-${release.version}.jar
+srcfile.extras.app                      echo3-extras-app-${release.version}-sources.jar
+srcfile.extras.webcontainer             echo3-extras-webcontainer-${release.version}-sources.jar
 warfile.testapp                         ExtrasTest.war
-fileprefix.release                      NextApp_Echo_Extras
-zipfile.release                         ${fileprefix.release}.${release.version}.zip
-tarfile.release                         ${fileprefix.release}.${release.version}.tar
-tgzfile.release                         ${fileprefix.release}.${release.version}.tgz
+fileprefix.release                      echo3-extras
+zipfile.release                         ${fileprefix.release}-${release.version}.zip
+tarfile.release                         ${fileprefix.release}-${release.version}.tar
+tgzfile.release                         ${fileprefix.release}-${release.version}.tgz
 
 dir.temp                                tmp
 
