Maven deployment update.
Analogous to the echo3filetransfer library, the ant build uses
the Maven Ant Tasks to fetch required dependencies and to
upload/stage a snapshot version to Maven Central.

--- a/ant.properties
+++ b/ant.properties
@@ -1,22 +1,25 @@
-release.version                         3.0.b8
+release.version                         3.0.0-SNAPSHOT
+echo.version                            3.0.0
 
-ant.build.javac.source 1.4
-ant.build.javac.target 1.4
+ant.build.javac.source                  1.4
+ant.build.javac.target                  1.4
 
-servlet.lib.jar                         ${env.SERVLET_LIB_JAR}
-servlet.lib.msg                         The environment variable SERVLET_LIB_JAR must contain the path to the Servlet 2.4 \
+servlet.lib.jar                         lib/servlet-api-2.4.jar
+servlet.lib.msg                         The ant property servlet.lib.jar must contain the path to the Servlet 2.4 \
                                         specification JAR file (servlet.jar or servlet-api.jar).
 
-echo3.app.lib.jar                       ${env.ECHO3_LIB_HOME}/Echo3_App.jar
-echo3.webcontainer.lib.jar              ${env.ECHO3_LIB_HOME}/Echo3_WebContainer.jar
+echo3.app.lib.jar                       lib/echo3-app-${echo.version}.jar
+echo3.webcontainer.lib.jar              lib/echo3-webcontainer-${echo.version}.jar
 
 debug                                   yes
 jarfile.extras.app                      echo3-extras-app-${release.version}.jar
 jarfile.extras.webcontainer             echo3-extras-webcontainer-${release.version}.jar
 srcfile.extras.app                      echo3-extras-app-${release.version}-sources.jar
 srcfile.extras.webcontainer             echo3-extras-webcontainer-${release.version}-sources.jar
+docfile.extras.app                      echo3-extras-app-${release.version}-javadoc.jar
+docfile.extras.webcontainer             echo3-extras-webcontainer-${release.version}-javadoc.jar
 warfile.testapp                         ExtrasTest.war
-fileprefix.release                      echo3-extras
+fileprefix.release                      ${ant.project.name}
 zipfile.release                         ${fileprefix.release}-${release.version}.zip
 tarfile.release                         ${fileprefix.release}-${release.version}.tar
 tgzfile.release                         ${fileprefix.release}-${release.version}.tgz
@@ -24,6 +27,8 @@ tgzfile.release                         ${fileprefix.release}-${release.version}
 dir.temp                                tmp
 
 dir.src                                 src
+dir.lib                                 lib
+
 dir.src.client                          ${dir.src}/client
 dir.src.client.extras                   ${dir.src.client}/extras
 
@@ -58,7 +63,7 @@ dir.build.server-java.webcontainer      ${dir.build.server-java}/webcontainer
 dir.build.server-java.webcontainer.res  ${dir.build.server-java.webcontainer}/nextapp/echo/extras/webcontainer/resource
 dir.build.server-java.testapp           ${dir.build.server-java}/testapp
 dir.build.server-java.release           ${dir.build.server-java}/release
-dir.build.server-java.release.root      ${dir.build.server-java.release}/NextApp_Echo3_Extras
+dir.build.server-java.release.root      ${dir.build.server-java.release}/${ant.project.name}
 
 dir.dist                                dist
 dir.dist.lib                            ${dir.dist}/lib
@@ -72,3 +77,8 @@ javadoc.doctitle.app                    Echo3 Extras <br>API Specification
 javadoc.doctitle.webcontainer           Echo3 Extras Container<br>API Specification
 javadoc.header                          <b>NextApp Echo3 Extras<br>${javadoc.version}</b>
 javadoc.cssfile                         ${dir.resource}/javadoc.css
+
+maven.repository.snapshots.id           sonatype-nexus-snapshots
+maven.repository.snapshots.url          https://oss.sonatype.org/content/repositories/snapshots/
+maven.repository.staging.id             sonatype-nexus-staging
+maven.repository.staging.url            https://oss.sonatype.org/service/local/staging/deploy/maven2/
