--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
  * the terms of any one of the MPL, the GPL or the LGPL.
 --> 
  
-<project name="echo3-extras" default="dist" basedir=".">
+<project name="echo3-extras" default="dist" basedir="." xmlns:artifact="antlib:org.apache.maven.artifact.ant">
 
     <property environment="env"/>
     <property file="custom-ant.properties"/>
@@ -46,9 +46,39 @@
         <include name="**/*stylesheet"/>
     </patternset>
     
+    <target name="-check.dependencies">
+        <available file="${dir.lib}/echo3-app-${echo.version}.jar" property="dependencies.present"/>
+    </target>
+
+    <target name="mvn.dependencies" depends="-mvn.inittasks"
+            description="Fetches the required dependencies from Maven Central into the lib dir">
+
+        <artifact:dependencies filesetId="dependency.fileset">
+            <dependency groupId="com.nextapp" artifactId="echo3-app" version="${echo.version}"/>
+            <dependency groupId="com.nextapp" artifactId="echo3-app" version="${echo.version}" classifier="sources"/>
+            <dependency groupId="com.nextapp" artifactId="echo3-webcontainer" version="${echo.version}"/>
+            <dependency groupId="com.nextapp" artifactId="echo3-webcontainer" version="${echo.version}" classifier="sources"/>
+            <dependency groupId="javax.servlet" artifactId="servlet-api" version="2.4"/>
+            <dependency groupId="javax.servlet" artifactId="servlet-api" version="2.4" classifier="sources"/>
+            <dependency groupId="junit" artifactId="junit" version="4.11" scope="test"/>
+            <dependency groupId="junit" artifactId="junit" version="4.11" scope="test" classifier="sources"/>
+        </artifact:dependencies>
+
+        <copy todir="${dir.lib}">
+            <fileset refid="dependency.fileset" />
+            <mapper type="flatten" />
+        </copy>
+    </target>
+
+    <target name="dependencies" depends="-check.dependencies" unless="dependencies.present"
+            description="Spot checks for dependency JARs availability and fetches via Maven Central if required">
+        <antcall target="mvn.dependencies"/>
+    </target>
+
     <!-- Minimize -->
     <target name="minimize" depends="clean" description="Removes all non-essential files, including Eclipse temporary/build output files">
         <delete dir="${dir.temp}"/>
+        <delete dir="${dir.lib}"/>
     </target>
     
     <!-- Clean -->
@@ -61,7 +91,7 @@
         <delete dir="${dir.release}"/>
     </target>
     
-    <target name="compile.app" description="Compile Application source files">
+    <target name="compile.app" description="Compile Application source files" depends="dependencies">
         <mkdir dir="${dir.build.server-java.app}"/>
         <javac srcdir="${dir.src.server-java.app}" destdir="${dir.build.server-java.app}" 
                 debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}">
@@ -87,6 +117,7 @@
         <javac srcdir="${dir.src.server-java.app-test}" destdir="${dir.build.server-java.app-test}" 
             debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}">
             <classpath>
+                <pathelement path="${dir.dist.lib}/${jarfile.extras.app}"/>
                 <pathelement path="${echo3.app.lib.jar}"/>
                 <pathelement path="${dir.dist.lib}/${jarfile.echo.app}"/>
             </classpath>
@@ -103,6 +134,7 @@
         <junit printsummary="yes" haltonfailure="no">
             <classpath>
                 <pathelement path="${echo3.app.lib.jar}"/>
+                <pathelement path="${dir.build.server-java.app}"/>
                 <pathelement path="${dir.build.server-java.app-test}"/>
                 <pathelement path="${dir.dist.lib}/${jarfile.echo.app}"/>
             </classpath>
@@ -282,9 +314,14 @@
     <target name="doc.private" 
             depends="doc.app.private, doc.webcontainer.private"/>
 
-    <target name="doc" 
+    <target name="doc.jars" depends="doc.public" description="Builds the *-javadoc.jar files">
+        <jar jarfile="${dir.dist.lib}/${docfile.extras.app}" basedir="${dir.javadoc.app.public}"/>
+        <jar jarfile="${dir.dist.lib}/${docfile.extras.webcontainer}" basedir="${dir.javadoc.webcontainer.public}"/>
+    </target>
+
+    <target name="doc"
             depends="doc.app, doc.app.private, doc.webcontainer, doc.webcontainer.private"/>
-    
+	
     <target name="release" depends="clean, dist, dist.testapp, doc.public">
         <mkdir dir="${dir.build.server-java.release.root}"/>
         <mkdir dir="${dir.build.server-java.release.root}/SourceCode"/>
@@ -342,74 +379,109 @@
         <delete file="${dir.release}/${tarfile.release}"/>
     </target>
 
-	<target name="mvn-install" depends="dist" description="Installs the jar into the local maven repository">
-		<condition property="onWindows">
-			<os family="windows"/>
-		</condition>
-		<antcall target="mvn-install-win"/>
-		<antcall target="mvn-install-unix"/>
-	</target>
-	
-    <target name="mvn-install-win"
-        description="Installs the jars into the local maven repository (windows environment)"
-    	if="onWindows">
-        <exec executable="cmd">
-			<arg value="/c"/>
-			<arg value="mvn install:install-file -DpomFile=resource/maven/echo3extras-app-pom.xml -Dfile=dist${file.separator}lib${file.separator}${jarfile.extras.app}"/>
-		</exec>
-    	<exec executable="cmd">
-            <arg value="/c"/>
-            <arg value="mvn install:install-file -DpomFile=resource/maven/echo3-app-pom.xml -Dfile=dist${file.separator}lib${file.separator}${srcfile.extras.app} -Dclassifier=sources"/>
-		</exec>
-		<exec executable="cmd">
-			<arg value="/c"/>
-			<arg value="mvn install:install-file -DpomFile=resource/maven/echo3extras-webcontainer-pom.xml -Dfile=dist${file.separator}lib${file.separator}${jarfile.extras.webcontainer}"/>
-		</exec>
-    	<exec executable="cmd">
-            <arg value="/c"/>
-            <arg value="mvn install:install-file -DpomFile=resource/maven/echo3-app-pom.xml -Dfile=dist${file.separator}lib${file.separator}${srcfile.extras.webcontainer} -Dclassifier=sources"/>
-		</exec>
-    </target>
-	
-    <target name="mvn-install-unix"
-        description="Installs the jar into the local maven repository (unix environment)"
-    	unless="onWindows">
-    	<exec executable="mvn">
-            <arg value="install:install-file"/>
-        	<arg value="-DpomFile=resource/maven/echo3extras-app-pom.xml"/>
-            <arg value="-Dfile=dist${file.separator}lib${file.separator}${jarfile.extras.app}"/>
-        </exec>
-    	<exec executable="mvn">
-            <arg value="install:install-file"/>
-        	<arg value="-DpomFile=resource/maven/echo3extras-app-pom.xml"/>
-    		<arg value="-Dclassifier=sources"/>
-            <arg value="-Dfile=dist${file.separator}lib${file.separator}${srcfile.extras.app}"/>
-        </exec>
-    	<exec executable="mvn">
-            <arg value="install:install-file"/>
-        	<arg value="-DpomFile=resource/maven/echo3extras-webcontainer-pom.xml"/>
-            <arg value="-Dfile=dist${file.separator}lib${file.separator}${jarfile.extras.webcontainer}"/>
-        </exec>
-        <exec executable="mvn">
-            <arg value="install:install-file"/>
-        	<arg value="-DpomFile=resource/maven/echo3extras-webcontainer-pom.xml"/>
-        	<arg value="-Dclassifier=sources"/>
-			<arg value="-Dfile=dist${file.separator}lib${file.separator}${srcfile.extras.webcontainer}"/>
-        </exec>
-    </target>
-    
-    <target name="jslint.extras">
-        <java fork="true" jar="${dir.resource.jslint}/rhino.jar">
-            <arg value="${dir.resource.jslint}/jslint.js"/>
-            <arg value="${dir.src.client.extras}/"/>
-        </java>
+    <target name="-mvn.generate.pom">
+        <mkdir dir="${dir.build}/maven-pom"/>
+        <copy todir="${dir.build}/maven-pom" filtering="true" overwrite="true">
+            <fileset dir="resource/maven" includes="*.xml"/>
+            <filterset id="maven.pom.filters" begintoken="$${" endtoken="}">
+                <filter token="release.version" value="${release.version}"/>
+                <filter token="echo.version" value="${echo.version}"/>
+            </filterset>
+        </copy>
     </target>
 
+    <target name="mvn.install" depends="dist, doc.jars, -mvn.generate.pom, -mvn.inittasks"
+            description="Installs the current release into the local maven repository">
+        <!-- Install Extras API module -->
+        <artifact:pom id="app-pom" file="${dir.build}/maven-pom/echo3extras-app-pom.xml" />
+        <artifact:install file="${dir.dist.lib}/${jarfile.extras.app}">
+            <pom refid="app-pom"/>
+            <attach file="${dir.dist.lib}/${srcfile.extras.app}" type="jar" classifier="sources"/>
+            <attach file="${dir.dist.lib}/${docfile.extras.app}" type="jar" classifier="javadoc"/>
+        </artifact:install>
+
+        <!-- Install Extras Web Servlet module -->
+        <artifact:pom id="webcontainer-pom" file="${dir.build}/maven-pom/echo3extras-webcontainer-pom.xml" />
+        <artifact:install file="${dir.dist.lib}/${jarfile.extras.webcontainer}">
+            <pom refid="webcontainer-pom"/>
+            <attach file="${dir.dist.lib}/${srcfile.extras.webcontainer}" type="jar" classifier="sources"/>
+            <attach file="${dir.dist.lib}/${docfile.extras.webcontainer}" type="jar" classifier="javadoc"/>
+        </artifact:install>
+    </target>
+
+    <target name="mvn.snapshot" depends="dist, doc.jars, -mvn.generate.pom, -mvn.inittasks"
+            description="Deploy snapshot version to configured Maven snapshot repository">
+        <!-- The artifact:deploy tasks do not repesct settings.xml for proxy/auth, so we use the mvn task -->
+        <!-- Deploy Echo API module. -->
+        <artifact:mvn>
+            <arg value="org.apache.maven.plugins:maven-deploy-plugin:2.6:deploy-file" />
+            <arg value="-Durl=${maven.repository.snapshots.url}" />
+            <arg value="-DrepositoryId=${maven.repository.snapshots.id}" />
+            <arg value="-DpomFile=${dir.build}/maven-pom/echo3extras-app-pom.xml" />
+            <arg value="-Dfile=${dir.dist.lib}/${jarfile.extras.app}" />
+            <arg value="-Dsources=${dir.dist.lib}/${srcfile.extras.app}" />
+            <arg value="-Djavadoc=${dir.dist.lib}/${docfile.extras.app}" />
+            <arg value="-e" />
+        </artifact:mvn>
+        <artifact:mvn>
+            <arg value="org.apache.maven.plugins:maven-deploy-plugin:2.6:deploy-file" />
+            <arg value="-Durl=${maven.repository.snapshots.url}" />
+            <arg value="-DrepositoryId=${maven.repository.snapshots.id}" />
+            <arg value="-DpomFile=${dir.build}/maven-pom/echo3extras-webcontainer-pom.xml" />
+            <arg value="-Dfile=${dir.dist.lib}/${jarfile.extras.webcontainer}" />
+            <arg value="-Dsources=${dir.dist.lib}/${srcfile.extras.webcontainer}" />
+            <arg value="-Djavadoc=${dir.dist.lib}/${docfile.extras.webcontainer}" />
+            <arg value="-e" />
+        </artifact:mvn>
+    </target>
+
+    <target name="mvn.stage" depends="dist, doc.jars, -mvn.generate.pom, -mvn.inittasks"
+            description="Deploy snapshot version to configured Maven snapshot repository">
+        <macrodef name="deploysigned">
+            <attribute name="module"/>
+            <attribute name="file"/>
+            <attribute name="classifier"/>
+
+            <sequential>
+                <artifact:mvn>
+                    <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.3:sign-and-deploy-file" />
+                    <arg value="-Durl=${maven.repository.staging.url}" />
+                    <arg value="-DrepositoryId=${maven.repository.staging.id}" />
+                    <arg value="-DpomFile=${dir.build}/maven-pom/echo3extras-@{module}-pom.xml" />
+                    <arg value="-Dfile=${dir.dist.lib}/@{file}" />
+                    <arg value="-Dclassifier=@{classifier}" />
+                    <arg value="-e" />
+                    <arg value="-Pgpg" />
+                </artifact:mvn>
+            </sequential>
+        </macrodef>
+
+        <deploysigned module="app" classifier=""        file="${jarfile.extras.app}"/>
+        <deploysigned module="app" classifier="sources" file="${srcfile.extras.app}"/>
+        <deploysigned module="app" classifier="javadoc" file="${docfile.extras.app}"/>
+
+        <deploysigned module="webcontainer" classifier=""        file="${jarfile.extras.webcontainer}"/>
+        <deploysigned module="webcontainer" classifier="sources" file="${srcfile.extras.webcontainer}"/>
+        <deploysigned module="webcontainer" classifier="javadoc" file="${docfile.extras.webcontainer}"/>
+    </target>
+
+    <target name="-mvn.inittasks" unless="mvntasks.initialized">
+        <taskdef resource="de/exxcellent/ant/tasks.properties" classpath="resource/maven/ant-exxtasks-1.0.jar"/>
+        <extendclasspath path="resource/maven/maven-ant-tasks-2.1.3.jar"/>
+        <available property="mvntasks.initialized" classname="org.apache.maven.project.MavenProject"/>
+    </target>
 
     <target name="jslint.webcontainer">
         <java fork="true" jar="${dir.resource.jslint}/rhino.jar">
             <arg value="${dir.resource.jslint}/jslint.js"/>
             <arg value="${dir.src.server-java.webcontainer.res}/"/>
+        </java>
+    </target>
+
+    <target name="jslint.extras">
+        <java fork="true" jar="${dir.resource.jslint}/rhino.jar">
+            <arg value="${dir.resource.jslint}/jslint.js"/>
+            <arg value="${dir.src.client.extras}/"/>
         </java>
     </target>
 
