--- a/build.xml
+++ b/build.xml
@@ -94,7 +94,8 @@
     <target name="compile.app" description="Compile Application source files" depends="dependencies">
         <mkdir dir="${dir.build.server-java.app}"/>
         <javac srcdir="${dir.src.server-java.app}" destdir="${dir.build.server-java.app}" 
-                debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}">
+                debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}"
+                includeantruntime="false">
             <classpath>
                 <pathelement path="${echo3.app.lib.jar}"/>
              </classpath>
@@ -115,7 +116,8 @@
     <target name="test.compile.app" depends="dist.app">
         <mkdir dir="${dir.build.server-java.app-test}"/>
         <javac srcdir="${dir.src.server-java.app-test}" destdir="${dir.build.server-java.app-test}" 
-            debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}">
+            debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}"
+            includeantruntime="false">
             <classpath>
                 <pathelement path="${dir.dist.lib}/${jarfile.extras.app}"/>
                 <pathelement path="${echo3.app.lib.jar}"/>
@@ -169,7 +171,8 @@
     <target name="compile.webcontainer.impl" depends="verify.servlet.api, compile.app">
         <mkdir dir="${dir.build.server-java.webcontainer}"/>
         <javac srcdir="${dir.src.server-java.webcontainer}" destdir="${dir.build.server-java.webcontainer}" 
-                debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}">
+                debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}"
+                includeantruntime="false">
             <classpath>
                 <pathelement path="${dir.build.server-java.app}"/>
                 <pathelement path="${echo3.webcontainer.lib.jar}"/>
@@ -213,7 +216,8 @@
             <fileset dir="${dir.src.server-java.test-ia.htdocs}"/>
         </copy>
         <javac srcdir="${dir.src.server-java.test-ia.lib}" destdir="${dir.build.server-java.testapp}/WEB-INF/classes" 
-                debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}">
+                debug="${debug}" deprecation="yes" source="${ant.build.javac.source}" target="${ant.build.javac.target}"
+                includeantruntime="false">
             <classpath>
                 <pathelement path="${servlet.lib.jar}"/>
                 <pathelement path="${dir.dist.lib}/${jarfile.extras.app}"/>
