--- a/ant.properties
+++ b/ant.properties
@@ -1,4 +1,4 @@
-release.version                         3.0.0-SNAPSHOT
+release.version                         3.0.0
 echo.version                            3.0.0
 
 ant.build.javac.source                  1.4
