Fixes ant test target by adding missing ant property

--- a/ant.properties
+++ b/ant.properties
@@ -62,6 +62,7 @@ dir.build.server-java.app               ${dir.build.server-java}/app
 dir.build.server-java.webcontainer      ${dir.build.server-java}/webcontainer
 dir.build.server-java.webcontainer.res  ${dir.build.server-java.webcontainer}/nextapp/echo/extras/webcontainer/resource
 dir.build.server-java.testapp           ${dir.build.server-java}/testapp
+dir.build.server-java.app-test          ${dir.build.server-java}/app-test
 dir.build.server-java.release           ${dir.build.server-java}/release
 dir.build.server-java.release.root      ${dir.build.server-java.release}/${ant.project.name}
 
