Add JUnit to test execution classpath

--- a/ant.properties
+++ b/ant.properties
@@ -8,6 +8,8 @@ servlet.lib.jar                         lib/servlet-api-2.4.jar
 servlet.lib.msg                         The ant property servlet.lib.jar must contain the path to the Servlet 2.4 \
                                         specification JAR file (servlet.jar or servlet-api.jar).
 
+junit.lib.jar                           lib/junit-4.11.jar
+
 echo3.app.lib.jar                       lib/echo3-app-${echo.version}.jar
 echo3.webcontainer.lib.jar              lib/echo3-webcontainer-${echo.version}.jar
 
@@ -51,7 +53,7 @@ dir.javadoc.webcontainer.public         ${dir.javadoc.public}/webcontainer
 dir.javadoc.app.private                 ${dir.javadoc.private}/app
 dir.javadoc.webcontainer.private        ${dir.javadoc.private}/webcontainer
 
-dir.testoutput                          testoutput
+dir.testoutput                          ${dir.build}/testoutput
 dir.src.server-java.app-test            ${dir.src.server-java}/app-test
 dir.build.app-test                      ${dir.build}/test/app
 dir.testoutput.app-test                 ${dir.testoutput}/app
