Change back to SNAPSHOT version and require Echo 3.0.1

--- a/ant.properties
+++ b/ant.properties
@@ -1,5 +1,5 @@
-release.version                         3.0.2
-echo.version                            3.0.0
+release.version                         3.0-SNAPSHOT
+echo.version                            3.0.1
 
 ant.build.javac.source                  1.4
 ant.build.javac.target                  1.4
